--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -8,27 +8,23 @@ on:
       - "[0-9]+.[0-9]+.[0-9]+b[0-9]+"
       - "[0-9]+.[0-9]+.[0-9]+rc[0-9]+"
 
-env:
-  PACKAGE_NAME: "ProgressPal"
-  OWNER: "Levi van Es"
-
 jobs:
   details:
     runs-on: ubuntu-latest
     outputs:
+      package_name: ${{ steps.package_information.outputs.package_name }}
       new_version: ${{ steps.release.outputs.new_version }}
       suffix: ${{ steps.release.outputs.suffix }}
       tag_name: ${{ steps.release.outputs.tag_name }}
     steps:
       - uses: actions/checkout@v2
-
       - name: Extract tag and Details
         id: release
         run: |
           if [ "${{ github.ref_type }}" = "tag" ]; then
             TAG_NAME=${GITHUB_REF#refs/tags/}
             NEW_VERSION=$(echo $TAG_NAME | awk -F'-' '{print $1}')
-            SUFFIX=$(echo $TAG_NAME | grep -oP '[a-z]+[0-9]+' || echo "")
+            SUFFIX=$(echo $TAG_NAME | awk -F'-' '{print $2}')
             echo "new_version=$NEW_VERSION" >> "$GITHUB_OUTPUT"
             echo "suffix=$SUFFIX" >> "$GITHUB_OUTPUT"
             echo "tag_name=$TAG_NAME" >> "$GITHUB_OUTPUT"
@@ -38,6 +34,20 @@ jobs:
           else
             echo "No tag found"
             exit 1
+          fi
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: "3.12"
+
+      - name: Get Name of Package
+        id: package_information
+        run: |
+          package_information=$(python setup.py --name)
+          PACKAGE_NAME=$(echo $package_information | awk '{print $1}')
+          echo "Package name: $PACKAGE_NAME"
+          echo "package_name=$PACKAGE_NAME" >> "$GITHUB_OUTPUT"
 
   check_pypi:
     needs: details
@@ -45,7 +55,8 @@ jobs:
     steps:
       - name: Fetch information from PyPI
         run: |
-          response=$(curl -s https://pypi.org/pypi/${{ env.PACKAGE_NAME }}/json || echo "{}")
+          PACKAGE_NAME=${{ needs.details.outputs.package_name}}
+          response=$(curl -s https://pypi.org/pypi/$PACKAGE_NAME/json || echo "{}")
           latest_previous_version=$(echo $response | grep -oP '"releases":\{"\K[^"]+' | sort -rV | head -n 1)
           if [ -z "$latest_previous_version" ]; then
             echo "Package not found on PyPI."
@@ -63,9 +74,10 @@ jobs:
             exit 1
           else
             echo "The new version $NEW_VERSION is greater than the latest version $LATEST_VERSION on PyPI."
+          fi
 
   setup_and_build:
-    needs: [details, check_pypi]
+    needs: details
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -75,14 +87,26 @@ jobs:
         with:
           python-version: "3.12"
 
-      - name: Install dependencies
+      - name: Bump version in setup.py
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          sed -i "s/version='.*'/version='${{ needs.details.outputs.new_version }}'/g" setup.py
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git checkout -b version-bump-${{ needs.details.outputs.new_version }}
+          git add setup.py
+          git commit -m "Bump version to $VERSION"
+          git push origin version-bump-${{ needs.details.outputs.new_version }}
 
-      - name: Set project version
-        run: |
-          sed -i "s/version=.*/version='${{ needs.details.outputs.new_version }}',/" setup.py
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
+        with:
+          branch: version-bump-${{ needs.details.outputs.new_version }}
+          title: "Bump version to ${{ needs.details.outputs.new_version }}"
+          body: "This PR bumps the version to ${{ needs.details.outputs.new_version }}."
+          labels: "version-bump"
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
       - name: Build source and wheel distribution
         run: |
@@ -101,7 +125,10 @@ jobs:
     environment:
       name: release
     permissions:
+      # In order to use Trusted Publisher
       id-token: write
+      contents: read
+
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
@@ -112,51 +139,38 @@ jobs:
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
 
-  github_release:
-    name: Create GitHub Release
-    needs: [setup_and_build, details]
+  bump-version:
+    needs: [details, pypi_publish]
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0
+          fetch-depth: 0 # Fetch full history to avoid issues with tags and branches
 
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          name: dist
-          path: dist/
+          python-version: "3.12"
 
-      - name: Create GitHub Release
-        id: create_release
-        env:
-          GH_TOKEN: ${{ github.token }}
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+      - name: Bump version
         run: |
-          gh release create ${{ needs.details.outputs.tag_name }} dist/* --title ${{ needs.details.outputs.tag_name }} --generate-notes
+          VERSION="${{ needs.details.outputs.new_version }}"
+          sed -i "s/version='.*'/version='$VERSION'/g" setup.py
+          git config user.name "GitHub Actions"
+          git config user.email "actions@github.com"
+          git checkout -b version-bump-${{ needs.details.outputs.new_version }}
+          git add setup.py
+          git commit -m "Bump version to $VERSION"
+          git push origin version-bump-${{ needs.details.outputs.new_version }}
 
-  bump_homebrew_formula:
-    name: Dispatch event to Repo B
-    needs: [details, github_release, pypi_publish]
-    runs-on: ubuntu-latest
-    environment:
-      name: release
-    steps:
-      - name: Dispatch Repository Dispatch event
-        uses: peter-evans/repository-dispatch@v2
+      - name: Create Pull Request
+        uses: peter-evans/create-pull-request@v4
         with:
-          token: ${{ secrets.BREW_TAP_TOKEN }}
-          repository: ${{ env.OWNER }}/{{ env.TAP_NAME }}
-          event-type: "update-formula"
-          client-payload: |-
-            { 
-              "formula_version": "${{env.FORMULA_VERSION}}", 
-              "formula_url": "${{ env.FORMULA_URL }}", 
-              "formula_name": "${{ env.FORMULA_NAME }}"
-            }
-        env:
-          FORMULA_VERSION: ${{ needs.details.outputs.new_version }}
-          FORMULA_NAME: ${{ env.PACKAGE_NAME }}
-          FORMULA_URL: https://github.com/${{env.OWNER}}/${{env.PACKAGE_NAME}}/releases/download/${{ needs.details.outputs.new_version }}/${{env.PACKAGE_NAME}}-${{ needs.details.outputs.new_version }}.tar.gz
+          branch: version-bump-${{ needs.details.outputs.new_version }}
+          title: "Bump version to ${{ needs.details.outputs.new_version }}"
+          body: "This PR bumps the version to ${{ needs.details.outputs.new_version }}."
+          labels: "version-bump"
