--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -152,6 +152,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
+      
+      - name: Install setuptools
+        run: pip install setuptools
 
       - name: Install dependencies
         run: pip install -r requirements.txt
