--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,6 +41,9 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Install setuptools
+        run: pip install setuptools
+
       - name: Get Name of Package
         id: package_information
         run: |
@@ -86,6 +89,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
+
+      - name: Install setuptools
+        run: pip install setuptools
 
       - name: Bump version in setup.py
         run: |
@@ -152,7 +158,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
-      
+
       - name: Install setuptools
         run: pip install setuptools
 
