--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -132,10 +132,7 @@ jobs:
     environment:
       name: release
     permissions:
-      # In order to use Trusted Publisher
       id-token: write
-      contents: read
-
     steps:
       - name: Download artifacts
         uses: actions/download-artifact@v3
@@ -145,6 +142,31 @@ jobs:
 
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
+
+  github_release:
+    name: Create GitHub Release
+    needs: [setup_and_build, details]
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # Fetch full history to avoid issues with tags and branches
+
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
+          path: dist/
+
+      - name: Create GitHub Release
+        id: create_release
+        env:
+          GH_TOKEN: ${{ github.token }}
+        run: |
+          gh release create ${{ needs.details.outputs.tag_name }} dist/* --title ${{ needs.details.outputs.tag_name }} --generate-notes
 
   bump-version:
     needs: [details, pypi_publish]
