--- a/src/ProgressPal/webapp/static/settings/settings.json
+++ b/src/ProgressPal/webapp/static/settings/settings.json
@@ -1,19 +1,1 @@
-{
-  "settings": {
-    "General": {
-      "RefreshRate": 1000
-    },
-    "UI": {
-      "Default Theme": "dark"
-    },
-    "Functions": {
-      "Remove-On-Completion": true
-    },
-    "Iterables": {
-      "Remove-On-Completion": true
-    },
-    "Logs": {
-      "Remove-On-Completion": true
-    }
-  }
-}
+{"settings": {"General": {"RefreshRate": "1000"}, "UI": {"Default-Theme": "dark"}, "Functions": {"Max-Functions": 100}, "Iterables": {"Remove-On-Completion": true, "Max-Iterables": 100}, "Logs": {"Max-Logs": 500}, "Notifications": {"Enable": false, "Sound": "chime"}}}
